--- a/_pages/404.md
+++ b/_pages/404.md
@@ -5,3 +5,11 @@ excerpt: "Unfortunately, the page could not be found. Maybe try at a restaurant 
 sitemap: false
 permalink: /404.html
 ---
+
+<script type="text/javascript">
+  var GOOG_FIXURL_LANG = 'en';
+  var GOOG_FIXURL_SITE = '{{ site.url }}'
+</script>
+<script type="text/javascript"
+  src="//linkhelp.clients.google.com/tbproxy/lh/wm/fixurl.js">
+</script>
