--- a/_pages/404.md
+++ b/_pages/404.md
@@ -6,6 +6,8 @@ sitemap: false
 permalink: /404.html
 ---
 
+Unfortunately, the page could not be found. Maybe try at a restaurant at the end of the universe?
+
 <script type="text/javascript">
   var GOOG_FIXURL_LANG = 'en';
   var GOOG_FIXURL_SITE = '{{ site.url }}'
