Add basic IC post

--- a/research/_posts/2018-10-27-ic_inital.md
+++ b/research/_posts/2018-10-27-ic_inital.md
@@ -1,7 +1,21 @@
 ---
-title: "Testing"
+title: "Applied ML for a smart mosquito trap"
 date: 2018-10-27
 tags: [machine learning, research, mosquitos]
 header:
   image: "/images/icmc.jpg"
+excerpt: "Information about the research project I worked on as a research assistant"
 --- 
+
+# The project
+As part of [USAID's](https://www.usaid.gov/) Combating Zika and Future Threats: A Grand Challenge for Development, a research project by professor [Gustavo Batista](http://conteudo.icmc.usp.br/pessoas/gbatista/) is in development to create a smart mosquito trap, that is able to selectively capture insects based on their danger to society.
+
+Scholarships were financed by USAID itself as part of the project.
+
+Further information can be found [here](http://www.jornaldocampus.usp.br/index.php/2016/10/icmc-cria-armadilha-contra-aedes-aegypti/) (in portuguese only currently).
+
+
+# Research
+As a research assistant, I worked closely along my professor and the rest of the team, focused on evaluating different classifiers for our given problem and pre-processing the raw data (wing beat frequency, temperature, humidity, etc) for to be used in the classifiers.
+
+Further information of the ongoing research can be found in the various posts in this category.
