Add structure for SLT

--- a/ML4u/_posts/2018-11-15-ml4u-video1.md
+++ b/ML4u/_posts/2018-11-15-ml4u-video1.md
@@ -44,3 +44,5 @@ The process of extracting usefull and interesing information/patterns from data.
 As opposed to more general term, artificial intelligence, machine learning is viewed as a more hands on and praticall discipline, not focused on necessarily basing itself on human inteligence, but applying techniques where a computer system can learn very specific tasks.
 
 
+# Extra Readings
+Only 1 extra reading for this video, but quite a extensive one, the paper [Statistical Learning Theory: Models, Concepts, and Results by Ulrike von Luxburg and Bernhard Schoelkopf](https://arxiv.org/pdf/0810.4752.pdf). It serves as a introduction to SLT, going through the general idea and formulation of the field, focused on the binary classification problem. My notes on it can be found [here]({% post_url SLT/2018-11-16-slt-introduction %})
