Change some posts excerpts

--- a/ML4u/_posts/2018-11-15-ml4u-video1.md
+++ b/ML4u/_posts/2018-11-15-ml4u-video1.md
@@ -4,7 +4,7 @@ date: 2018-11-15
 tags: [machine learning, ML4U]
 header:
   image: "/images/icmc.jpg"
-excerpt: "Notes on the introductiory video (Portuguese)"
+excerpt: "Notes on video 1 of the ML4u series (videos in Portuguese)"
 --- 
 
 This first video is very much a idea of what the channel will be about and a lot of interesting concepts are thrown around. Let's visit some of them and try to define them:
