--- a/SLT/_posts/2018-11-16-slt-part1.md
+++ b/SLT/_posts/2018-11-16-slt-part1.md
@@ -4,7 +4,7 @@ date: 2018-11-16
 tags: [machine learning, SLT]
 header:
   image: "/images/icmc.jpg"
-excerpt: "Notes from the beginning to part 3"
+excerpt: "Notes from the beginning to part 3 of the paper 'Statistical Learning Theory: Models, Concepts, and Results'"
 --- 
 
 To-Do...
