Add math formulas and halfway through slt-part1

--- a/SLT/_posts/2018-11-16-slt-part1.md
+++ b/SLT/_posts/2018-11-16-slt-part1.md
@@ -35,20 +35,55 @@ More spefically, SLT theory tries to answer the following questions about learni
 
 # The formal setup
 
+### Considerations about our data
 To setup the framework we will use to help us answer some of the above questions, we will need to formalize some things:
 Lets consider our data is divided into two parts, where X represents the information we have as to help us predict something (our feature space) and Y our prediction (target space).
-Lets assume there is a underlying [joint probability distribution](http://www.inf.ed.ac.uk/teaching/courses/cfcs1/lectures/joint.pdf) P on X * Y (that is, P is the distribution of the probability of X=x with intersection with Y=y). Also assume X and Y are [independent and identically distributed random variables (iid)](https://en.wikipedia.org/wiki/Independent_and_identically_distributed_random_variables). That means that each instance of our data, (Xi, Yi), is sampled independently from P, with one sampling not affecting the next.
+Lets assume there is a underlying [joint probability distribution](http://www.inf.ed.ac.uk/teaching/courses/cfcs1/lectures/joint.pdf) $$ P $$ on $$ X \times Y $$ (that is, P is the distribution of the probability of X=x with intersection with Y=y or in mathematical jargom, $$ P(X=x | Y=y) $$). Also assume X and Y are [independent and identically distributed random variables (iid)](https://en.wikipedia.org/wiki/Independent_and_identically_distributed_random_variables). That means that each instance of our data, $$ (X_i, Y_i) $$, is sampled independently from P, with one sampling not affecting the next.
 
 We will be able to do many things with just these assumptions, but first lets have a look at what it truly means to suppose the things we did:
 
 1. **We did not assume P to be any known distribution.** This is important because frequently in statistics we suppose certain distributions, but our whole work here won't actually try to define the distribution P
 
-2. **Our labels can be non-deterministic.** Since P can be any distribution, we are including the case where we don't have a way to predict with 100% accuracy some instaces of our data. This can be seen from the fact that $$ P(Y=+1 | X=x) $$ does not need to be 0 or 1, instead being able to be any value in between as well. This is a needed property to have since we might have *noise* in our data, not allowing us to be 100% sure, or maybe we have *overlapping classes*.
-
+2. **Our labels can be non-deterministic.** Since P can be any distribution, we are including the case where we don't have a way to predict with 100% accuracy some instaces of our data. This can be seen from the fact that $$ P(X=x | Y=y) $$ does not need to be 0 or 1, instead being able to be any value in between as well. This is a needed property to have since we might have *noise* in our data, not allowing us to be 100% sure, or maybe we have *overlapping classes*.
 For example consider we are trying to predict the sex of a individual given his height; depending on our data, it will be impossible to be 100% sure of the person's sex if their height is 1.7m (in fact, given a large enough sample, no height would give us 100% accuracy).
+If there isn't much noise in the data, then $$ n(x) = P(X=x | Y=y) $$ will be either close to 0 or +1 (depending on if the true label of x is -1 or +1). But if there is a lot of noise in the data, $$ n(x) \approx 0.5 $$, which means that trying to predict the class is the same as a random guess.
 
-If there isn't much noise in the data, 
+3. **Independent sampling.** It is a reasonable assumption to make, but frequently not the case in real data. For example, take the drug pharmacy, where ML is used to try to predict if a certain combination of chemicals will be usefull for humans. Since it is very costly to actually test all of these combinations, the data we do have is based on what experts thought was worth testing in the first case, clearly not a independent sampling of all the possible chemical options.
+We can also notice that this property means we can not use this framework (at least not without a more general formulation) to analyze [active learning](https://en.wikipedia.org/wiki/Active_learning_(machine_learning)).
+
+4. **The distribution of P is fixed.** Because of this, we are excluding pretty much all time-series problems and problems related to co-variate shift, that is, when the distributions of independent variables change due to some variable we are not measuring (for example, the height of a population changing due to better access to food, but there still being a relationship between height and sex).
+
+5. **The distribution of P is unknown.** This is important because we will learn that if P was known, we would have a closed formula for the best classifier. In ML, precisely what we want to solve are problems where P is not known.
 
 
+Ok, that was a lot of thought provoking concepts, take some time to sketch them out and make sure you know what the implications of our assumptions really mean. With that done, let's now get into some more concrete definitions, which will be needed to help us evaluate how well a classifier performs:
 
 
+### Definitions 
+We will treat our classifier as a function/mapping of $$ X -> Y $$ and call it  $$ f $$.
+
+We need a way to measure how a classifier performs, more especifically what is the error it makes on a single individual data point. The general name for this functions is a **loss function**. For example, in binary classification, our error can simply be 0 if we have predicted the right class and +1 otherwise. For regression problems, a frequently used loss function is the [mean squared error](https://en.wikipedia.org/wiki/Mean_squared_error). Given a certain classifier $$ f $$, our loss function is then: $$ L(X, Y, f(X)) $$.
+
+So now that we have a function to measure the error of a instance in our data, what is our overall error? It can be defined as simply the [expected value](https://www.statisticshowto.datasciencecentral.com/probability-and-statistics/expected-value/) of the loss function, frequently callled the **risk of a function** and defined as $$ R(f) = E(L(X, Y, f(x)))$$, where $$ E() $$ represents the expected value of something.
+
+With these definitions, we realize we want a classifier $$ f $$ that has the smallest possible $$ R(f) $$.
+
+
+### A optimal classifier
+Just remembering, we want a function $$ \{f: X - > Y\} $$ given a joint distribution P between X and Y. We can easily create a optimal classifier, named **Bayes Classifier** if we definite it as:
+
+$$ f_{BAYES} = +1 $$     if $$ P(X=x \| Y=y) >= 0.5 $$
+
+$$ f_{BAYES} = -1 $$       otherwise
+
+That's great, if we can create such a classifier, all our problems are solved right? Actually, we have just created another problem: remember that the underlying distribution P is not known, therefore we can't actually create our classifier. Luckily for us, SLT comes to the rescue again! Let's first take a breather, get some coffee and properly define out classsification problem with all the definitions we have now created:
+
+
+### Binary classification definition
+Given some training points $$ (X_i, Y_i), ..., (X_n, Y_N) $$ drawn independently from some *unknown*, non-changing distribution P, and given a *loss function* $$ l() $$, how can we construct a function $$ f: X - > Y $$ which has a risk $$ R(f) $$ as close as possible to the risk of the Bayes Classifer?
+
+That's good, we have now formalized exactly what the binary classification problem is! We an also know exactly what are problem is:
+
+* We cannot compute $$ R(f_{BAYES}) $$ without knowing exactly what the distribution P is.
+
+How does STL theory deal with this? Stay tuned for further development! (or go ahead and read the orignal paper ;) )
