--- a/SLT/_posts/2018-11-16-slt-part1.md
+++ b/SLT/_posts/2018-11-16-slt-part1.md
@@ -1,10 +1,10 @@
 ---
-title: "Notes Part 1"
+title: "Notes SLT Part 1"
 date: 2018-11-16
 tags: [machine learning, SLT]
 header:
   image: "/images/icmc.jpg"
-excerpt: "Notes from the beginning to part 3 of the paper 'Statistical Learning Theory: Models, Concepts, and Results'"
+excerpt: "Notes from the beginning to chapter 3 of the paper 'Statistical Learning Theory: Models, Concepts, and Results'"
 mathjax: "true"
 --- 
 
@@ -86,4 +86,14 @@ That's good, we have now formalized exactly what the binary classification probl
 
 * We cannot compute $$ R(f_{BAYES}) $$ without knowing exactly what the distribution P is.
 
-How does STL theory deal with this? Stay tuned for further development! (or go ahead and read the orignal paper ;) )
+How does STL theory deal with this? As you've probably figured it out by now, by creating even more definitions and mathematical formalizations! Let's try to figure out what it means for a classifier to be able to "generalize" as well as the Bayes Classifier.
+
+
+### Generalization and Consistency
+Remember that we want a classifier *f* that is able to learn from data and generalize to some unseen data, but what does "generalize" even mean in this context? Intuitively it means that it makes the same mistakes the best possible classifier (Bayes Classifier) would make. We can write this out mathematically if we define the **empirical risk/training error** as:
+
+$$ R_{emp}(f) = 1/n \sum_{i=1}^n l(X_i, Y_i, f(X_i)) $$
+
+
+
+
