Move everything around

--- a/_ml/2018-11-16-slt-part1.md
+++ b/_ml/2018-11-16-slt-part1.md
@@ -22,7 +22,7 @@ Statistical learning theory (or SLT for short) is a old field, originating in th
 # The general framework of SLT
 The whole idea behind "learning" tasks is to be able to infer a more general rule, that simultaneously explains past experiences and correctly classifies new examples. 
 
-We are mentioning classification only since that is the general focus of the paper, more specifically binary classification, where we only have 2 possibles classes (which will we consider +1 and -1 from here on). We will also only consider supervised learning problems (read [this]({% post_url ML4u/2018-11-17-ml4u-video3 %}) if you don't know what means). If you are anything like me, you might be appalled to be disconsidering all of unsupervised and semi-supervised learning, but according to the paper it will make the maths easier (and we will be disconsidering so many other things, this will be the least of our worries).
+We are mentioning classification only since that is the general focus of the paper, more specifically binary classification, where we only have 2 possibles classes (which will we consider +1 and -1 from here on). We will also only consider supervised learning problems (read [this]({% link _ml/2018-11-17-ml4u-video3.md %}) if you don't know what means). If you are anything like me, you might be appalled to be disconsidering all of unsupervised and semi-supervised learning, but according to the paper it will make the maths easier (and we will be disconsidering so many other things, this will be the least of our worries).
 
 More specifically, SLT theory tries to answer the following questions about learning tasks:
 
@@ -183,6 +183,6 @@ If you've gotten to this point, congratulations on sticking through all the math
 
 From here on, we will have a look at a more practical example, proving that a [well known and used](https://scikit-learn.org/stable/modules/neighbors.html) algorithm is in fact consistent.
 
-I would suggest first having a look at the [explanation behind the K Nearest Neighbours (K-NN)]({% post_url ML4u/2018-11-17-ml4u-video5_6_7 %}) algorithm, which accompanies a implementation in Python3.
+I would suggest first having a look at the [explanation behind the K Nearest Neighbours (K-NN)]({% link _ml/2018-11-17-ml4u-video5_6_7.md %}) algorithm, which accompanies a implementation in Python3.
 
-If you already have the idea behing K-NN at the tip of your tongue, go ahead and read on [about the proof that it is a consistent algorithm]({% post_url SLT/2018-11-16-slt-part2 %}).
+If you already have the idea behing K-NN at the tip of your tongue, go ahead and read on [about the proof that it is a consistent algorithm]({% link _ml/2018-11-16-slt-part2.md %}).
