--- a/_ml/2018-11-15-ml4u-video1.md
+++ b/_ml/2018-11-15-ml4u-video1.md
@@ -45,4 +45,4 @@ As opposed to more general term, artificial intelligence, machine learning is vi
 
 
 # Extra Readings
-Only 1 extra reading for this video, but quite a extensive one, the paper [Statistical Learning Theory: Models, Concepts, and Results by Ulrike von Luxburg and Bernhard Schoelkopf](https://arxiv.org/pdf/0810.4752.pdf). It serves as a introduction to SLT, going through the general idea and formulation of the field, focused on the binary classification problem. My notes on it can be found [here]({% post_url SLT/2018-11-16-slt-introduction %})
+Only 1 extra reading for this video, but quite a extensive one, the paper [Statistical Learning Theory: Models, Concepts, and Results by Ulrike von Luxburg and Bernhard Schoelkopf](https://arxiv.org/pdf/0810.4752.pdf). It serves as a introduction to SLT, going through the general idea and formulation of the field, focused on the binary classification problem. My notes on it can be found [here]({% link _ml/2018-11-16-slt-introduction.md %})
