"Add posts about research"

--- a/_research/2018-10-27-ic_inital.md
+++ b/_research/2018-10-27-ic_inital.md
@@ -12,12 +12,23 @@ excerpt: "Information about the research project I worked on as a research assis
 # The project
 As part of [USAID's](https://www.usaid.gov/) Combating Zika and Future Threats: A Grand Challenge for Development, a research project by professor [Gustavo Batista](http://conteudo.icmc.usp.br/pessoas/gbatista/) is in development to create a smart mosquito trap, that is able to selectively capture insects based on their danger to society.
 
+The idea is to be able to classify a insect by his wing beating frequency alongside other environment data such as temperature, pressure, etc. Then, we can selectively suck the insect into the trap if it is dangerous (ie, Zika / Dengue / Malaria virus transmitters). Otherwise, if it is a bee for example, we swap the airflow and are able to push the insect out.
+
+My contribution to the project was a analysis of the classifications algorithms and trying to tune them for our dataset.
+
 Scholarships were financed by USAID itself as part of the project.
 
 Further information can be found [here](http://www.jornaldocampus.usp.br/index.php/2016/10/icmc-cria-armadilha-contra-aedes-aegypti/) (in portuguese only currently).
 
-
 # Research
+
 As a research assistant, I worked closely along my professor and the rest of the team, focused on evaluating different classifiers for our given problem and pre-processing the raw data (wing beat frequency, temperature, humidity, etc) for to be used in the classifiers.
+
+These included things such as:
+
+- Processing: Transformed raw audio data (mosquitos wingbeats) into structured data using time series analys.
+
+- Classifying: Evaluated different models (tree classifiers, deep neural networks, SVMs, etc.) to classify different
+insect species; achieved highest classification accuracy (99%) in our yearly milestone report.
 
 Further information of the ongoing research can be found in the various posts in this category.
