--- a/_research/2018-11-15-siicusp.md
+++ b/_research/2018-11-15-siicusp.md
@@ -11,15 +11,15 @@ of Undergraduate Research"
 
 --- 
 
-# The project
-As part of [USAID's](https://www.usaid.gov/) Combating Zika and Future Threats: A Grand Challenge for Development, a research project by professor [Gustavo Batista](http://conteudo.icmc.usp.br/pessoas/gbatista/) is in development to create a smart mosquito trap, that is able to selectively capture insects based on their danger to society.
+# SIICUSP
 
-Scholarships were financed by USAID itself as part of the project.
+The University of São Paulo's International Symposium of Undergraduate Research (SIICUSP) is an annual event in which undergraduate students communicate the results of their research projects, developed at USP or other universities. It also aims at helping students improve their academic research skills and at fostering the interaction of researchers from different areas and levels in order to promote collaboration and multidisciplinary research. 
 
-Further information can be found [here](http://www.jornaldocampus.usp.br/index.php/2016/10/icmc-cria-armadilha-contra-aedes-aegypti/) (in portuguese only currently).
+Since 2014, SIICUSP is held in two stages. In the first stage, each School, or group of Schools, hosts their own events, with participants of their subject areas. The best evaluated students of each School are invited to a second event, in which they have the opportunity to present their projects again, this time in a multidisciplinary context. Students from universities abroad also present their projects, selected by committees from their institutions.
 
+# 26th SIICUSP
 
-# Research
-As a research assistant, I worked closely along my professor and the rest of the team, focused on evaluating different classifiers for our given problem and pre-processing the raw data (wing beat frequency, temperature, humidity, etc) for to be used in the classifiers.
+After partaking in stage 1, I was selected to present my research on optimizing classifier parameters for insect datasets at the international stage. Afterwards I was one of the students awarded a [Honorable Mention]({{ site.baseurl }}{% link download/siicusp/mencao.pdf %}) for the quality of the paper, poster and presentation.
 
-Further information of the ongoing research can be found in the various posts in this category.
+A copy of the paper in English can be found [here]({{ site.baseurl }}{% link download/siicusp/final_version_english.pdf %}) and of the English poster [here]({{ site.baseurl }}{% link download/siicusp/poster_siicusp.pdf %}). There is also a Portuguese translations of the paper [here]({{ site.baseurl }}{% link download/siicusp/final_version_port.pdf %}).
+
